clusters/homelab/apps/media/clusterplex/service-orchestrator.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterplex-orchestrator
  namespace: media
  labels:
    app.kubernetes.io/name: clusterplex-orchestrator
    app.kubernetes.io/part-of: clusterplex
spec:
  type: ClusterIP
  ports:
    - name: orchestrator
      port: 3500
      protocol: TCP
      targetPort: orchestrator
  selector:
    app.kubernetes.io/name: clusterplex-orchestrator
